/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package eventmesh.catalog.api.protocol;

option java_multiple_files = true;
option java_package="org.apache.eventmesh.common.protocol.catalog.protos";
option java_outer_classname = "EventmeshCatalogGrpc";

option go_package = "github.com/apache/incubator-eventmesh/eventmesh-catalog-go/api/proto";

service Catalog {
    rpc Registry (RegistryRequest) returns (RegistryResponse) {}
    rpc QueryOperations (QueryOperationsRequest) returns (QueryOperationsResponse) {}
}

message RegistryRequest {
	string file_name = 1;
	string definition = 2;
}

message RegistryResponse {
}

message QueryOperationsRequest {
    string service_name = 1;
    string operation_id = 2;
}

message Operation {
    string channel_name = 1;
    string schema = 2;
    // publish/subscribe
    string type = 3;
}

message QueryOperationsResponse {
    repeated Operation operations = 1;
}